--- a/Html File/Scheduale.html
+++ b/Html File/Scheduale.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../Css files/Style.css">
+    <link rel="stylesheet" href="../Css files/dashbord.css">
     <title>Schedule</title>
 </head>
 
@@ -35,7 +36,7 @@
                       <i class="uil uil-lock password"></i>
                       <i class="uil uil-eye-slash pw_hide"></i>
                     </div>
-                    <button class="button"  onclick="login()" id="login_now"> Login Now</button>
+                    <button class="button"  onclick="login(event)" id="login_now"> Login Now</button>
                     <a href="#" data-target="Tasks" class="nav-link" id="task_nav">See My Tasks</a>
                     <div class="login_signup">Don't have an account? <a href="#"  data-target="Sign_Up" class="nav-link" id="signup">Signup</a></div>
                   </form>
@@ -101,225 +102,32 @@
                 <h1 class="title">My tasks</h1>
                 <div class="buttons-container">
                   <button
-                    id="add-task-cta"
                     class="nav-link"
-                    data-target="addTask" 
+                    data-target="Add"
+                    id="button regular-button blue-background"
                   >
                     Add task
                   </button>
-                  <button class="sign-out-cta">Sign out</button>
                 </div>
               </div>
             </div>
-            <!-- radio buttons -->
-            <div class="radio-buttons-container">
-              <div class="max-width-container flex">
-                <div class="radio-container">
-                  <input
-                    type="radio"
-                    id="list"
-                    name="view-option"
-                    value="list"
-                    class="radio-input"
-                    checked
-                  />
-                  <label for="list" class="radio-label">
-                    <!-- list-bulleted -->
-                    <iconify-icon
-                      icon="material-symbols:format-list-bulleted-rounded"
-                      style="color: black"
-                      width="24"
-                      height="24"
-                    ></iconify-icon>
-                    <span>List</span>
-                  </label>
-                </div>
-                <div class="radio-container">
-                  <input
-                    type="radio"
-                    id="board"
-                    name="view-option"
-                    value="board"
-                    class="radio-input"
-                  />
-                  <label for="board" class="radio-label">
-                    <!-- grid -->
-                    <iconify-icon
-                      icon="ic:round-grid-view"
-                      style="color: black"
-                      width="24"
-                      height="24"
-                    ></iconify-icon>
-                    <span>Board</span>
-                  </label>
-                </div>
-              </div>
+            <!-- board view -->
+            <div id="board-view" class="board-view">
+              <!-- Here we'll dynamically populate tasks from the database -->
             </div>
-            <!-- tasks -->
-            <div class="max-width-container">
-              <!-- list view -->
-              <div id="list-view" class="list-view">
-                <div class="list-container pink">
-                  <h2 class="list-header">
-                    <span class="circle pink-background"></span
-                    ><span class="text">To do</span>
-                  </h2>
-                  <ul class="tasks-list">
-                    <li class="task-item">
-                      <button class="task-button">
-                        <p class="task-name">Design UI</p>
-                        <p class="task-due-date">Due on January 7, 2020</p>
-                        <!-- arrow -->
-                        <iconify-icon
-                          icon="material-symbols:arrow-back-ios-rounded"
-                          style="color: black"
-                          width="18"
-                          height="18"
-                          class="arrow-icon"
-                        ></iconify-icon>
-                      </button>
-                    </li>
-                    <li class="task-item">
-                      <button class="task-button">
-                        <p class="task-name">Design UI</p>
-                        <p class="task-due-date">Due on January 7, 2020</p>
-                        <!-- arrow -->
-                        <iconify-icon
-                          icon="material-symbols:arrow-back-ios-rounded"
-                          style="color: black"
-                          width="18"
-                          height="18"
-                          class="arrow-icon"
-                        ></iconify-icon>
-                      </button>
-                    </li>
-                    <li class="task-item">
-                      <button class="task-button">
-                        <p class="task-name">Design UI</p>
-                        <p class="task-due-date">Due on January 7, 2020</p>
-                        <!-- arrow -->
-                        <iconify-icon
-                          icon="material-symbols:arrow-back-ios-rounded"
-                          style="color: black"
-                          width="18"
-                          height="18"
-                          class="arrow-icon"
-                        ></iconify-icon>
-                      </button>
-                    </li>
-                  </ul>
-                </div>
-                <div class="list-container blue">
-                  <h2 class="list-header">
-                    <span class="circle blue-background"></span
-                    ><span class="text">Doing</span>
-                  </h2>
-                  <ul class="tasks-list">
-                    <li class="task-item">
-                      <button class="task-button">
-                        <p class="task-name">Design UI</p>
-                        <p class="task-due-date">Due on January 7, 2020</p>
-                        <!-- arrow -->
-                        <iconify-icon
-                          icon="material-symbols:arrow-back-ios-rounded"
-                          style="color: black"
-                          width="18"
-                          height="18"
-                          class="arrow-icon"
-                        ></iconify-icon>
-                      </button>
-                    </li>
-                    <li class="task-item">
-                      <button class="task-button">
-                        <p class="task-name">Design UI</p>
-                        <p class="task-due-date">Due on January 7, 2020</p>
-                        <!-- arrow -->
-                        <iconify-icon
-                          icon="material-symbols:arrow-back-ios-rounded"
-                          style="color: black"
-                          width="18"
-                          height="18"
-                          class="arrow-icon"
-                        ></iconify-icon>
-                      </button>
-                    </li>
-                    <li class="task-item">
-                      <button class="task-button">
-                        <p class="task-name">Design UI</p>
-                        <p class="task-due-date">Due on January 7, 2020</p>
-                        <!-- arrow -->
-                        <iconify-icon
-                          icon="material-symbols:arrow-back-ios-rounded"
-                          style="color: black"
-                          width="18"
-                          height="18"
-                          class="arrow-icon"
-                        ></iconify-icon>
-                      </button>
-                    </li>
-                  </ul>
-                </div>
-                <div class="list-container green">
-                  <h2 class="list-header">
-                    <span class="circle green-background"></span
-                    ><span class="text">Done</span>
-                  </h2>
-                  <ul class="tasks-list">
-                    <li class="task-item">
-                      <button class="task-button">
-                        <p class="task-name">Design UI</p>
-                        <p class="task-due-date">Due on January 7, 2020</p>
-                        <!-- arrow -->
-                        <iconify-icon
-                          icon="material-symbols:arrow-back-ios-rounded"
-                          style="color: black"
-                          width="18"
-                          height="18"
-                          class="arrow-icon"
-                        ></iconify-icon>
-                      </button>
-                    </li>
-                    <li class="task-item">
-                      <button class="task-button">
-                        <p class="task-name">Design UI</p>
-                        <p class="task-due-date">Due on January 7, 2020</p>
-                        <!-- arrow -->
-                        <iconify-icon
-                          icon="material-symbols:arrow-back-ios-rounded"
-                          style="color: black"
-                          width="18"
-                          height="18"
-                          class="arrow-icon"
-                        ></iconify-icon>
-                      </button>
-                    </li>
-                    <li class="task-item">
-                      <button class="task-button">
-                        <p class="task-name">Design UI</p>
-                        <p class="task-due-date">Due on January 7, 2020</p>
-                        <!-- arrow -->
-                        <iconify-icon
-                          icon="material-symbols:arrow-back-ios-rounded"
-                          style="color: black"
-                          width="18"
-                          height="18"
-                          class="arrow-icon"
-                        ></iconify-icon>
-                      </button>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-  <!-- CARD LAYOUT ENDS -->           
-        </div>
-        </div>    
+          </div>
+          
+        </div>  
+        <div class="page" id="Add">
+
+        </div> 
     </main>
     <script src="../Js Files/Scheduale.js"></script>
     <script src="../Js Files/Database.js"></script>
     <script src="../Js Files/Fajax.js"></script>
     <script src="../Js Files/Network.js"></script>
     <script src="../Js Files/Server.js"></script>
+    <script src="../Js Files/Tasks.js"></script>
     
 
 </body>
