--- a/Html File/Scheduale.html
+++ b/Html File/Scheduale.html
@@ -105,7 +105,6 @@
                     class="nav-link"
                     data-target="Add"
                     id="button regular-button blue-background"
-                    onclick="addTask()"
                   >
                     Add task
                   </button>
@@ -174,7 +173,7 @@
                       </li>
                   </ul>
                   <div class="text-center">
-                      <button type="submit" class="button regular-button green-background cta-button" onclick="addTask()" id="adding_task">Add task</button>
+                      <button type="submit" class="button regular-button green-background cta-button" onclick="addTask(event)" id="adding_task">Add task</button>
                   </div>
               </form>
           </div>
