--- a/Html File/Scheduale.html
+++ b/Html File/Scheduale.html
@@ -37,14 +37,13 @@
                       <i class="uil uil-eye-slash pw_hide"></i>
                     </div>
                     <button class="button"  onclick="login(event)" id="login_now"> Login Now</button>
-                    <a href="#" data-target="Tasks" class="nav-link" id="task_nav">See My Tasks</a>
                     <div class="login_signup">Don't have an account? <a href="#"  data-target="Sign_Up" class="nav-link" id="signup">Signup</a></div>
                   </form>
                 </div>
             </div>
             <div>
               <img class="img_left" src="../Images/left.jpeg"/>
-              <img class="img_right" src="../Images/right.jpeg"/>
+              <img class="img_right" src="../Images/right.jpeg"/>dispatcher
             </div>
         </div>
         <div class="page" id="Sign_Up">
@@ -74,7 +73,8 @@
                     <i class="uil uil-lock password"></i>
                     <i class="uil uil-eye-slash pw_hide"></i>
                   </div>
-                  <button class="button" onclick="sign_up()" id="signup_Now">Signup Now</button>
+                  <button class="button" onclick="sign_up(event)" id="signup_Now">Signup Now</button>
+                 
                   <div class="login_signup">Already have an account? <a href="#" data-target="home" class="nav-link" id="login">Login</a></div>
                 </form>
               </div>
