--- a/Html File/Scheduale.html
+++ b/Html File/Scheduale.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../Css files/Style.css">
     <link rel="stylesheet" href="../Css files/dashbord.css">
+    <!-- google font: Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <title>Schedule</title>
 </head>
 
@@ -117,10 +126,9 @@
         <!-- add + update task -->
         <div id="set-task-overlay" class="overlay set-task-overlay hide">
           <div class="overlay-content pink-background">
-              <!-- close button -->
-              <button class="button circle-button blue-background flex justify-center items-center close-button">
-                  <iconify-icon icon="material-symbols:close-rounded" style="color: black" width="26" height="26"></iconify-icon>
-              </button>
+             <!-- close button -->
+             <button class="button circle-button blue-background flex justify-center items-center close-button" onclick="closeWindow()" id="close-button">X
+            </button>
               <h1 class="header">Add task</h1>
               <form class="form" autocomplete="off">
                   <label for="name" class="label">Name</label>
@@ -200,34 +208,17 @@
         <div class="control-buttons-container">
           <!-- Edit button -->
           <button class="button circle-button pink-background flex justify-center items-center">
+            <i class="fas fa-edit"></i>
             <iconify-icon icon="material-symbols:edit-rounded" style="color: black" width="24" height="24"></iconify-icon>
           </button>
           <!-- Delete button -->
-          <button id="delete-task-cta" class="button circle-button pink-background flex justify-center items-center">
+          <button id="delete-task-cta" onclick="" class="button circle-button pink-background flex justify-center items-center">
+            <i class="fas fa-trash"></i>
             <iconify-icon icon="ic:round-delete" style="color: black" width="24" height="24"></iconify-icon>
           </button>
         </div>
       </div>
     </div>
-
-<!-- Main content -->
-<div class="content-container">
-  <!-- Header -->
-  <div class="max-width-container">
-    <div class="header flex items-center justify-between">
-      <h1 class="title">My tasks</h1>
-      <div class="buttons-container">
-        <button class="nav-link" data-target="Add" id="button regular-button blue-background">Add task</button>
-      </div>
-    </div>
-  </div>
-  <!-- Board view -->
-  <div id="board-view" class="board-view">
-    <!-- Task list with task names -->
-    <!-- Example: <div class="task-name" data-task-id="123">Task Name</div> -->
-  </div>
-</div>
-
     </div>
     </main>
     <script src="../Js Files/Scheduale.js"></script>
