--- a/Html File/Scheduale.html
+++ b/Html File/Scheduale.html
@@ -186,9 +186,8 @@
     <!-- Task details overlay -->
     <div id="view-task-overlay" class="overlay view-task-overlay hide">
       <div class="overlay-content green-background">
-        <!-- Close button -->
-        <button class="button circle-button blue-background flex justify-center items-center close-button">
-          <iconify-icon icon="material-symbols:close-rounded" style="color: black" width="26" height="26"></iconify-icon>
+        <!-- close button -->
+        <button class="button circle-button blue-background flex justify-center items-center close-button" onclick="closeWindow()" id="close-button">X
         </button>
         <!-- Task details placeholders -->
         <h1 class="header no-margin">Name</h1>
